# drill-hole-gan

./: .gitignore  pyproject.toml
data/: MSDP_nozero.csv
